...
    lifecycleOwner: LifecycleOwner,
    cameraController: LifecycleCameraController
) {

    AndroidView(
        modifier = modifier
            .testTag("cameraPreview")
            .fillMaxSize()
            .padding(10.dp),
        factory = { context ->
            PreviewView(context).apply {
                layoutParams = LinearLayout.LayoutParams(
                    LinearLayout.LayoutParams.MATCH_PARENT,
...
