...
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                Row(
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(50.dp)
                        .testTag("CameraOption")
                        .clickable(onClick = {
                            navigation(NavScreens.ScannerScreen, null)
                        }),
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Icon(
...
